<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DownloadChaptersActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <NumberPicker
            android:id="@+id/chapterStart"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="93dp" />

        <NumberPicker
            android:id="@+id/chapterFinish"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="17dp" />

        <TextView
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Button
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="144dp"
            android:text="@string/download" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="40dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

        <TextView
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textSize="36sp" />
    </RelativeLayout>

</LinearLayout>